--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Public</title>
+  <title>Kyle McReynolds</title>
   <base href="/">
   <script src="https://kit.fontawesome.com/efcfbfa076.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
